# cloudflare-verified-ddns

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.yaml
.github/workflows/: ci.yaml  docker-publish.yaml  docker-publish.yml  pr-lint.yaml
app/: cache.py  cloudflare.py  config.py  ddns_controller.py  gsheets_service.py  logger.py  main.py  recovery_controller.py  utils.py
docs/: ARCHITECTURE.md  CONTROL_LOOP.md  SYSTEM_DESIGN.md  VPN-DNS-STACK.md
src/cloudflare_verified_ddns/: cache.py  logger.py
tests/: test_agent.py  test_cloudflare.py  test_config.py  test_ddns_controller.py  test_google_sheets_logger.py  test_logger.py  test_metrics_tracker.py  test_readiness.py  test_scheduling_policy.py  test_update_dns_record.py  test_utils.py  test_watchdog.py
