[project]
name = "cloudflare-verified-ddns"
version = "0.1.0"
description = "Lightweight, reliable Dynamic DNS updater for Cloudflare"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "responses>=0.25.8",
  "pytest-cov>=6.3.0",
  "black>=25.1.0",
]
